# NUMERO-FUN

./: .gitignore  LICENSE_HEADER  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-publish.yml
src/: __init__.py  constants.py
src/numero_fun/: __init__.py  calculator.py  cli.py
tests/: __init__.py  conftest.py  test_calculator.py
