[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numero-fun"
version = "0.1.2"
description = "A CLI tool for calculating numerology of names"
readme = "README.md"
authors = [{ name = "Garima Shrivastava" }]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["numerology", "cli", "calculator"]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "questionary>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "build>=0.7.0",
    "twine>=4.0.0",
]

[project.scripts]
numero-fun = "numero_fun.cli:main"

[project.urls]
Homepage = "https://github.com/techy4shri/Numero-Fun"
Issues = "https://github.com/techy4shri/Numero-Fun/issues"